Alteração para readequar ao Script
Alteração efetuada para se readequar ao script de JS feito anteriormente

--- a/index.html
+++ b/index.html
@@ -2,13 +2,9 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>Alterar Cor com JS e CSS</title>
-    <link rel="stylesheet" href="estilos.css">
+    <title>Alterar Cor com Botão</title>
 </head>
 <body>
-    <div id="caixa">Este é um bloco de cor</div>
     <button id="botao">Alterar Cor</button>
-
-    <script src="script.js"></script>
 </body>
 </html>
