Atualização do Index
Adição de novas linhas de texto

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Alterar Cor com Botão</title>
 </head>
 <body>
-    <button id="botao">Alterar Cor</button>
+    <h1>Trabalho De Git</h1>
+    <button id="botao">Mudar a Cor</button>
 
     <script src="script.js"></script>
 </body>
